fix spacing issue on native select

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -149,6 +149,7 @@
 
     select,
     input {
+      height: 100%;
       width: 100%;
       position: absolute;
       top: 0;
